Converted JSON-holding columns to JsonB Converted internal representation of json holding fields to JsonNode