@@ -17,6 +17,10 @@
  */
 package de.fraunhofer.iosb.ilt.frostserver.model;
 
+import com.fasterxml.jackson.databind.node.IntNode;
+import com.fasterxml.jackson.databind.node.JsonNodeFactory;
+import com.fasterxml.jackson.databind.node.ObjectNode;
+import com.fasterxml.jackson.databind.node.TextNode;
 import de.fraunhofer.iosb.ilt.frostserver.model.core.AbstractDatastream;
 import de.fraunhofer.iosb.ilt.frostserver.model.core.AbstractEntity;
 import de.fraunhofer.iosb.ilt.frostserver.model.core.Entity;
@@ -29,6 +33,7 @@ import de.fraunhofer.iosb.ilt.frostserver.model.ext.UnitOfMeasurement;
 import de.fraunhofer.iosb.ilt.frostserver.property.EntityProperty;
 import de.fraunhofer.iosb.ilt.frostserver.property.NavigationPropertyMain;
 import de.fraunhofer.iosb.ilt.frostserver.property.Property;
+import java.lang.reflect.InvocationTargetException;
 import java.util.Arrays;
 import java.util.HashMap;
 import java.util.Map;
@@ -54,8 +59,8 @@ public class TestIsSetProperty {
      * The logger for this class.
      */
     private static final Logger LOGGER = LoggerFactory.getLogger(TestIsSetProperty.class);
-    private Map<Property, Object> propertyValues = new HashMap<>();
-    private Map<Property, Object> propertyValuesAlternative = new HashMap<>();
+    private final Map<Property, Object> propertyValues = new HashMap<>();
+    private final Map<Property, Object> propertyValuesAlternative = new HashMap<>();
 
     @Rule
     public final ExpectedException exception = ExpectedException.none();
@@ -74,15 +79,15 @@ public class TestIsSetProperty {
         propertyValues.put(EntityProperty.NAME, "myName");
         propertyValues.put(EntityProperty.OBSERVATIONTYPE, "my Type");
         propertyValues.put(EntityProperty.OBSERVEDAREA, new Polygon(new LngLatAlt(0, 0), new LngLatAlt(1, 0), new LngLatAlt(1, 1)));
-        Map<String, Object> parameters = new HashMap<>();
+        ObjectNode parameters = JsonNodeFactory.instance.objectNode();
         parameters.put("key1", "value1");
         parameters.put("key2", 2);
         propertyValues.put(EntityProperty.PARAMETERS, parameters);
         propertyValues.put(EntityProperty.PHENOMENONTIME, TimeInstant.now());
         propertyValuesAlternative.put(EntityProperty.PHENOMENONTIME, TimeInterval.parse("2014-03-02T13:00:00Z/2014-05-11T15:30:00Z"));
         propertyValues.put(EntityProperty.PROPERTIES, parameters);
-        propertyValues.put(EntityProperty.RESULT, 42);
-        propertyValues.put(EntityProperty.RESULTQUALITY, "myQuality");
+        propertyValues.put(EntityProperty.RESULT, new IntNode(42));
+        propertyValues.put(EntityProperty.RESULTQUALITY, new TextNode("myQuality"));
         propertyValues.put(EntityProperty.RESULTTIME, TimeInstant.now());
         propertyValuesAlternative.put(EntityProperty.RESULTTIME, TimeInterval.parse("2014-03-01T13:00:00Z/2014-05-11T15:30:00Z"));
         propertyValues.put(EntityProperty.SELFLINK, "http://my.self/link");
@@ -200,11 +205,11 @@ public class TestIsSetProperty {
         try {
             Class<? extends Entity> typeClass = type.getImplementingClass();
 
-            Entity entity = typeClass.newInstance();
+            Entity entity = typeClass.getConstructor().newInstance();
             for (Property p : collectedProperties) {
                 addPropertyToObject(entity, p);
             }
-            Entity entityEmpty = typeClass.newInstance();
+            Entity entityEmpty = typeClass.getConstructor().newInstance();
 
             EntityChangedMessage message = new EntityChangedMessage();
             entityEmpty.setEntityPropertiesSet(entity, message);
@@ -214,7 +219,7 @@ public class TestIsSetProperty {
             entityEmpty.setEntityPropertiesSet(entityEmpty, message);
             testPropertiesChanged(message, collectedProperties, entityEmpty, false);
 
-        } catch (InstantiationException | IllegalAccessException | NoSuchMethodException ex) {
+        } catch (InvocationTargetException | IllegalArgumentException | InstantiationException | IllegalAccessException | NoSuchMethodException ex) {
             LOGGER.error("Failed to access property.", ex);
             Assert.fail("Failed to access property: " + ex.getMessage());
         }
